integrate properties files

--- a/properties/com/jidesoft/converter/converter_ko.properties
+++ b/properties/com/jidesoft/converter/converter_ko.properties
@@ -1,5 +1,22 @@
-# @(#) converter_ko.properties
-
-
+#
+#Strings for BooleanConverter
+#
 Boolean.true=True
 Boolean.false=False
+
+#
+#Strings for FontConverter
+#
+Font.plain=\uBCF4\uD1B5
+Font.bold=\uAD75\uAC8C
+Font.italic=\uC774\uD0C8\uB9AD\uCCB4
+Font.boldItalic=\uAD75\uC740 \uC774\uD0C8\uB9AD\uCCB4
+
+#
+#Strings for QuarterConverter
+#
+Quarter.quarter=Qtr {0}
+#Please note, there is a space at the end of Qtr.
+
+Range.range={0} - {1}
+Range.multiple=(\uBCF5\uC218\uC758)
