--- a/properties/com/jidesoft/converter/converter_zh_CN.properties
+++ b/properties/com/jidesoft/converter/converter_zh_CN.properties
@@ -1,18 +1,22 @@
 #
 #Strings for BooleanConverter
 #
-Boolean.true=\u771f
+Boolean.true=\u771F
 Boolean.false=\u5047
 
 #
 #Strings for FontConverter
 #
-Font.plain=\u6b63\u5e38
-Font.bold=\u52a0\u7c97
-Font.italic=\u503e\u659c
-Font.boldItalic=\u52a0\u7c97\u503e\u659c
+Font.plain=\u6B63\u5E38
+Font.bold=\u52A0\u7C97
+Font.italic=\u503E\u659C
+Font.boldItalic=\u52A0\u7C97\u503E\u659C
 
 #
 #Strings for QuarterConverter
 #
-Quarter.quarter=\u7b2c{0}\u5b63\u5ea6
+Quarter.quarter=\u7B2C{0}\u5B63\u5EA6
+#Please note, there is a space at the end of Qtr.
+
+Range.range={0} - {1}
+Range.multiple=(\u591A\u91CD)
