--- a/properties/com/jidesoft/dialog/buttons_de.properties
+++ b/properties/com/jidesoft/dialog/buttons_de.properties
@@ -13,16 +13,16 @@ Button.no=Nein
 Button.apply=Anwenden
 Button.apply.mnemonic=A
 
-Button.back=< Zur\u00fcck
+Button.back=< Zur\u00FCck
 Button.back.mnemonic=R
 
 Button.browse=Durchsuchen
 Button.browse.mnemonic=D
 
-Button.clear=L\u00f6schen
+Button.clear=L\u00F6schen
 Button.clear.mnemonic=L
 
-Button.close=Schlie\u00dfen
+Button.close=Schlie\u00DFen
 Button.close.mnemonic=S
 
 Button.continue=Fortfahren
@@ -37,16 +37,16 @@ Button.exit.mnemonic=V
 Button.find=Suchen
 Button.find.mnemonic=S
 
-Button.findNext=N\u00e4chste suchen
+Button.findNext=N\u00E4chste suchen
 Button.findNext.mnemonic=N
 
 Button.finish=Beenden
 Button.finish.mnemonic=B
 
-Button.forward=Vorw\u00e4rts
+Button.forward=Vorw\u00E4rts
 Button.forward.mnemonic=V
 
-Button.goback=Gehe zur\u00fcck
+Button.goback=Gehe zur\u00FCck
 Button.goback.mnemonic=G
 
 Button.help=Hilfe
@@ -58,8 +58,8 @@ Button.new.mnemonic=N
 Button.next=Weiter >
 Button.next.mnemonic=W
 
-Button.open=\u00d6ffnen
-Button.open.mnemonic=\u00d6
+Button.open=\u00D6ffnen
+Button.open.mnemonic=\u00D6
 
 Button.print=Drucken
 Button.print.mnemonic=D
@@ -70,7 +70,7 @@ Button.replace.mnemonic=E
 Button.retry=Neuversuch
 Button.retry.mnemonic=N
 
-Button.run=Ausf\u00fchren
+Button.run=Ausf\u00FChren
 Button.run.mnemonic=A
 
 Button.save=Speichern
