--- a/properties/com/jidesoft/dialog/buttons_es.properties
+++ b/properties/com/jidesoft/dialog/buttons_es.properties
@@ -6,14 +6,14 @@ Button.ok=Aceptar
 
 Button.cancel=Cancelar
 
-Button.yes=S\355
+Button.yes=S\u00ED
 
 Button.no=No
 
 Button.apply=Aplicar
 Button.apply.mnemonic=A
 
-Button.back=< Atr\u00e1s
+Button.back=< Atr\u00E1s
 Button.back.mnemonic=T
 
 Button.browse=Navegar
@@ -46,7 +46,7 @@ Button.finish.mnemonic=F
 Button.forward=Continuar
 Button.forward.mnemonic=C
 
-Button.goback=Ir atr\u00e1s
+Button.goback=Ir atr\u00E1s
 Button.goback.mnemonic=I
 
 Button.help=Ayuda
