--- a/properties/com/jidesoft/dialog/buttons_ja.properties
+++ b/properties/com/jidesoft/dialog/buttons_ja.properties
@@ -13,77 +13,77 @@ Button.no=\u3044\u3044\u3048(N)
 Button.apply=\u9069\u7528(A)
 Button.apply.mnemonic=A
 
-Button.back=< \u623b\u308b(B)
+Button.back=< \u623B\u308B(B)
 Button.back.mnemonic=B
 
-Button.browse=\u53c2\u7167(B)
+Button.browse=\u53C2\u7167(B)
 Button.browse.mnemonic=B
 
-Button.clear=\u30af\u30ea\u30a2(C)
+Button.clear=\u30AF\u30EA\u30A2(C)
 Button.clear.mnemonic=C
 
-Button.close=\u9589\u3058\u308b(C)
+Button.close=\u9589\u3058\u308B(C)
 Button.close.mnemonic=C
 
-Button.continue=\u7d9a\u3051\u308b(C)
+Button.continue=\u7D9A\u3051\u308B(C)
 Button.continue.mnemonic=C
 
-Button.edit=\u7de8\u96c6(E)
+Button.edit=\u7DE8\u96C6(E)
 Button.edit.mnemonic=E
 
-Button.exit=\u7d42\u4e86(X)
+Button.exit=\u7D42\u4E86(X)
 Button.exit.mnemonic=X
 
-Button.find=\u691c\u7d22(F)
+Button.find=\u691C\u7D22(F)
 Button.find.mnemonic=F
 
-Button.findNext=\u6b21\u3092\u691c\u7d22(N)
+Button.findNext=\u6B21\u3092\u691C\u7D22(N)
 Button.findNext.mnemonic=N
 
-Button.finish=\u5b8c\u4e86(F)
+Button.finish=\u5B8C\u4E86(F)
 Button.finish.mnemonic=F
 
-Button.forward=\u6b21\u3078\u9032\u3080(F)
+Button.forward=\u6B21\u3078\u9032\u3080(F)
 Button.forward.mnemonic=F
 
-Button.goback=\u623b\u308b(G)
+Button.goback=\u623B\u308B(G)
 Button.goback.mnemonic=G
 
-Button.help=\u30d8\u30eb\u30d7(H)
+Button.help=\u30D8\u30EB\u30D7(H)
 Button.help.mnemonic=H
 
-Button.new=\u65b0\u898f(N)
+Button.new=\u65B0\u898F(N)
 Button.new.mnemonic=N
 
-Button.next=\u6b21\u3078(N) >
+Button.next=\u6B21\u3078(N) >
 Button.next.mnemonic=N
 
-Button.open=\u958b\u304f(O)
+Button.open=\u958B\u304F(O)
 Button.open.mnemonic=O
 
 Button.print=\u5370\u5237(P)
 Button.print.mnemonic=P
 
-Button.replace=\u7f6e\u63db(R)
+Button.replace=\u7F6E\u63DB(R)
 Button.replace.mnemonic=R
 
-Button.retry=\u518d\u8a66\u884c(R)
+Button.retry=\u518D\u8A66\u884C(R)
 Button.retry.mnemonic=R
 
-Button.run=\u958b\u59cb(R)
+Button.run=\u958B\u59CB(R)
 Button.run.mnemonic=R
 
-Button.save=\u4fdd\u5b58(S)
+Button.save=\u4FDD\u5B58(S)
 Button.save.mnemonic=S
 
-Button.saveAs=\u540d\u524d\u3092\u3064\u3051\u3066\u4fdd\u5b58(A)
+Button.saveAs=\u540D\u524D\u3092\u3064\u3051\u3066\u4FDD\u5B58(A)
 Button.saveAs.mnemonic=A
 
-Button.stop=\u505c\u6b62(S)
+Button.stop=\u505C\u6B62(S)
 Button.stop.mnemonic=S
 
-Button.showDetails=\u8a73\u7d30(D) >>
+Button.showDetails=\u8A73\u7D30(D) >>
 Button.showDetails.mnemonic=D
 
-Button.hideDetails=<< \u8a73\u7d30(D)
+Button.hideDetails=<< \u8A73\u7D30(D)
 Button.hideDetails.mnemonic=D
