--- a/properties/com/jidesoft/dialog/buttons_nl.properties
+++ b/properties/com/jidesoft/dialog/buttons_nl.properties
@@ -2,6 +2,14 @@
 #Buttons
 #
 
+Button.ok=Ok\u00E9
+
+Button.cancel=Annuleren
+
+Button.yes=Ja
+
+Button.no=Nee
+
 Button.apply=Toepassen
 Button.apply.mnemonic=T
 
