--- a/properties/com/jidesoft/dialog/buttons_pt_BR.properties
+++ b/properties/com/jidesoft/dialog/buttons_pt_BR.properties
@@ -2,6 +2,14 @@
 #Buttons
 #
 
+Button.ok=OK
+
+Button.cancel=Cancelar
+
+Button.yes=Sim
+
+Button.no=N\u00E3o
+
 Button.apply=Aplicar
 Button.apply.mnemonic=A
 
@@ -29,13 +37,13 @@ Button.exit.mnemonic=;S
 Button.find=Localizar
 Button.find.mnemonic=L
 
-Button.findNext=Localizar pr\u00f3ximo
+Button.findNext=Localizar pr\u00F3ximo
 Button.findNext.mnemonic=x
 
 Button.finish=Concluir
 Button.finish.mnemonic=C
 
-Button.forward=Avan\u00e7ar
+Button.forward=Avan\u00E7ar
 Button.forward.mnemonic=A
 
 Button.goback=Retroceder
@@ -47,7 +55,7 @@ Button.help.mnemonic=A
 Button.new=Novo
 Button.new.mnemonic=N
 
-Button.next=Pr\u00f3ximo >
+Button.next=Pr\u00F3ximo >
 Button.next.mnemonic=P
 
 Button.open=Abrir
