--- a/properties/com/jidesoft/plaf/basic/basic_nl.properties
+++ b/properties/com/jidesoft/plaf/basic/basic_nl.properties
@@ -19,19 +19,23 @@ DockableFrameTitlePane.floatingTooltip=Zwevend in-/uitschakelen
 
 DockableFrameTitlePane.autohideText=Automatisch verbergen
 DockableFrameTitlePane.autohideMnemonic=A
+## for both autohide button and stop autohide button since it is a toggle button
 DockableFrameTitlePane.autohideTooltip=Automatisch verbergen in-/uitschakelen
 
 DockableFrameTitlePane.maximizeText=Maximaliseren
 DockableFrameTitlePane.maximizeMnemonic=M
+
 DockableFrameTitlePane.restoreText=Vorig formaat
 DockableFrameTitlePane.restoreMnemonic=F
+## for both maximize button and restore button since it is a toggle button
 DockableFrameTitlePane.maximizeTooltip=Maximaliseren/vorig formaat
 
 #
-# Dockableframe attributes
+# DockableFrame attributes
 #
 DockableFrameTitlePane.dockableText=Vergrendelbaar
 DockableFrameTitlePane.dockableMnemonic=G
+DockableFrameTitlePane.dockableTooltip=In-/uitschakelen vergrendelbaar
 
 DockableFrameTitlePane.hidableText=Verbergbaar
 DockableFrameTitlePane.hidableMnemonic=R
