--- a/properties/com/jidesoft/plaf/basic/basic_zh_CN.properties
+++ b/properties/com/jidesoft/plaf/basic/basic_zh_CN.properties
@@ -1,44 +1,73 @@
-DockableFrameTitlePane.closeText=\u5173\u95ed(C)
-DockableFrameTitlePane.closeMnemonic=C
-DockableFrameTitlePane.closeTooltip=\u5173\u95ed
-DockableFrameTitlePane.hideAutohideText=\u9690\u85cf(H)
-DockableFrameTitlePane.hideAutohideMnemonic=H
-DockableFrameTitlePane.hideAutohideTooltip=\u9690\u85cf\u6d3b\u52a8\u7684\u81ea\u52a8\u9690\u85cf\u7a97\u53e3
-DockableFrameTitlePane.floatingText=\u6d6e\u52a8(F)
-DockableFrameTitlePane.floatingMnemonic=F
-DockableFrameTitlePane.floatingTooltip=\u5207\u6362\u6d6e\u52a8
-DockableFrameTitlePane.autohideText=\u81ea\u52a8\u9690\u85cf(A)
-DockableFrameTitlePane.autohideMnemonic=A
-DockableFrameTitlePane.autohideTooltip=\u5207\u6362\u81ea\u52a8\u9690\u85cf
-DockableFrameTitlePane.maximizeText=\u6700\u5927\u5316(M)
-DockableFrameTitlePane.maximizeMnemonic=M
-DockableFrameTitlePane.maximizeTooltip=\u6700\u5927\u5316\uff0f\u8fd8\u539f
-DockableFrameTitlePane.restoreText=\u8fd8\u539f(R)
-DockableFrameTitlePane.restoreMnemonic=R
-DockableFrameTitlePane.dockableText=\u53ef\u505c\u9760(D)
-DockableFrameTitlePane.dockableMnemonic=D
-DockableFrameTitlePane.dockableTooltip=\u5207\u6362\u53ef\u505c\u9760
-DockableFrameTitlePane.hidableText=\u53ef\u9690\u85cf(I)
-DockableFrameTitlePane.hidableMnemonic=I
-DockableFrameTitlePane.floatableText=\u53ef\u6d6e\u52a8(L)
-DockableFrameTitlePane.floatableMnemonic=L
-DockableFrameTitlePane.autohidableText=\u53ef\u81ea\u52a8\u9690\u85cf(U)
-DockableFrameTitlePane.autohidableMnemonic=U
-Undo.dragging=\u62d6\u52a8
-Undo.hide=\u9690\u85cf
-Undo.toggle=\u5207\u6362\u6d6e\u52a8\uff0f\u505c\u9760\u6a21\u5f0f
-Undo.toggleAutohide=\u5207\u6362\u81ea\u52a8\u9690\u85cf\uff0f\u505c\u9760\u6a21\u5f0f
-Undo.maximize=\u6700\u5927\u5316
-Undo.restore=\u8fd8\u539f
-Undo.resizing=\u7f29\u653e
-Undo.moving=\u79fb\u52a8
-CollapsiblePane.collapseText=\u5c55\u5f00\uff0f\u6298\u53e0
-CollapsiblePane.collapseToolTip=\u5c55\u5f00\u6216\u6298\u53e0\u5185\u5bb9
+#
+# Strings for DockableFrame TitlePane
+#
 
 #
-# Tabbed Pane
+# Button actions
 #
-JideTabbedPane.scrollBackward=\u5411\u524d\u6eda\u52a8
-JideTabbedPane.scrollForward=\u5411\u540e\u6eda\u52a8
-JideTabbedPane.showList=\u663e\u793a\u5217\u8868
-JideTabbedPane.close=\u5173\u95ed
+DockableFrameTitlePane.closeText=\u5173\u95ED(C)
+DockableFrameTitlePane.closeMnemonic=C
+DockableFrameTitlePane.closeTooltip=\u5173\u95ED
+
+DockableFrameTitlePane.hideAutohideText=\u9690\u85CF(H)
+DockableFrameTitlePane.hideAutohideMnemonic=H
+DockableFrameTitlePane.hideAutohideTooltip=\u9690\u85CF\u6D3B\u52A8\u7684\u81EA\u52A8\u9690\u85CF\u7A97\u53E3
+
+DockableFrameTitlePane.floatingText=\u6D6E\u52A8(F)
+DockableFrameTitlePane.floatingMnemonic=F
+DockableFrameTitlePane.floatingTooltip=\u5207\u6362\u6D6E\u52A8
+
+DockableFrameTitlePane.autohideText=\u81EA\u52A8\u9690\u85CF(A)
+DockableFrameTitlePane.autohideMnemonic=A
+## for both autohide button and stop autohide button since it is a toggle button
+DockableFrameTitlePane.autohideTooltip=\u5207\u6362\u81EA\u52A8\u9690\u85CF
+
+DockableFrameTitlePane.maximizeText=\u6700\u5927\u5316(M)
+DockableFrameTitlePane.maximizeMnemonic=M
+
+DockableFrameTitlePane.restoreText=\u8FD8\u539F(R)
+DockableFrameTitlePane.restoreMnemonic=R
+## for both maximize button and restore button since it is a toggle button
+DockableFrameTitlePane.maximizeTooltip=\u6700\u5927\u5316\uFF0F\u8FD8\u539F
+
+#
+# DockableFrame attributes
+#
+DockableFrameTitlePane.dockableText=\u53EF\u505C\u9760(D)
+DockableFrameTitlePane.dockableMnemonic=D
+DockableFrameTitlePane.dockableTooltip=\u5207\u6362\u53EF\u505C\u9760
+
+DockableFrameTitlePane.hidableText=\u53EF\u9690\u85CF(I)
+DockableFrameTitlePane.hidableMnemonic=I
+
+DockableFrameTitlePane.floatableText=\u53EF\u6D6E\u52A8(L)
+DockableFrameTitlePane.floatableMnemonic=L
+
+DockableFrameTitlePane.autohidableText=\u53EF\u81EA\u52A8\u9690\u85CF(U)
+DockableFrameTitlePane.autohidableMnemonic=U
+
+#
+# Strings for Undo
+#
+Undo.dragging=\u62D6\u52A8
+Undo.hide=\u9690\u85CF
+Undo.toggle=\u5207\u6362\u6D6E\u52A8\uFF0F\u505C\u9760\u6A21\u5F0F
+Undo.toggleAutohide=\u5207\u6362\u81EA\u52A8\u9690\u85CF\uFF0F\u505C\u9760\u6A21\u5F0F
+Undo.maximize=\u6700\u5927\u5316
+Undo.restore=\u8FD8\u539F
+Undo.resizing=\u7F29\u653E
+Undo.moving=\u79FB\u52A8
+
+#
+# Strings for CollapsiblePane
+#
+CollapsiblePane.collapseText=\u5C55\u5F00\uFF0F\u6298\u53E0
+CollapsiblePane.collapseToolTip=\u5C55\u5F00\u6216\u6298\u53E0\u5185\u5BB9
+
+#
+# Strings for JideTabbedPane
+#
+JideTabbedPane.scrollBackward=\u5411\u524D\u6EDA\u52A8
+JideTabbedPane.scrollForward=\u5411\u540E\u6EDA\u52A8
+JideTabbedPane.showList=\u663E\u793A\u5217\u8868
+JideTabbedPane.close=\u5173\u95ED
