--- a/properties/com/jidesoft/plaf/basic/folderChooser_nl.properties
+++ b/properties/com/jidesoft/plaf/basic/folderChooser_nl.properties
@@ -12,3 +12,5 @@ FolderChooser.toolbar.home=Ga naar thuis map
 FolderChooser.toolbar.mydocuments=Ga naar Mijn Documenten
 FolderChooser.toolbar.delete=Verwijder de geselecteerde map
 FolderChooser.toolbar.new=Nieuwe map aanmaken onder de geselecteerde map
+FolderChooser.toolbar.refresh=Vernieuw de mapweergave om externe mapwijzigingen te reflecteren
+FolderChooser.toolbar.recent=Recent:
