--- a/properties/com/jidesoft/plaf/basic/folderChooser_zh_CN.properties
+++ b/properties/com/jidesoft/plaf/basic/folderChooser_zh_CN.properties
@@ -1,24 +1,16 @@
 #
-# /*
-#  * @(#)folderChooser_zh_CN.properties 7/13/2006
-#  *
-#  * Copyright 2002 - 2006 JIDE Software Inc. All rights reserved.
-#  */
-#
-
-#
 # FolderChooser
 #
-FolderChooser.new.title=\u5efa\u7acb\u65b0\u76ee\u5f55
-FolderChooser.new.folderName=\u8f93\u5165\u65b0\u76ee\u5f55\u540d\uff1a
-FolderChooser.delete.title=\u786e\u8ba4\u5220\u9664\u76ee\u5f55
-FolderChooser.delete.header=\u60a8\u771f\u7684\u8981\u5220\u9664\u9009\u4e2d\u7684\u76ee\u5f55\u5417\uff1f
-FolderChooser.delete.message1=\u60a8\u771f\u7684\u8981\u5220\u9664\u9009\u4e2d\u7684\u76ee\u5f55\u548c\u5b83\u7684\u6240\u6709\u5b50\u76ee\u5f55\u5417\uff1f 
-FolderChooser.delete.message2=\u60a8\u771f\u7684\u8981\u5220\u9664\u76ee\u5f55\u201c{0}\u201d\u548c\u5b83\u7684\u6240\u6709\u5b50\u76ee\u5f55\u5417\uff1f 
-FolderChooser.toolbar.desktop=\u9009\u4e2d\u684c\u9762
-FolderChooser.toolbar.home=\u9009\u4e2d\u4e3b\u76ee\u5f55
-FolderChooser.toolbar.mydocuments=\u9009\u4e2d\u6211\u7684\u6587\u6863
-FolderChooser.toolbar.delete=\u5220\u9664\u9009\u4e2d\u76ee\u5f55
-FolderChooser.toolbar.new=\u5728\u9009\u4e2d\u7684\u76ee\u5f55\u4e0b\u5efa\u7acb\u65b0\u76ee\u5f55
-FolderChooser.toolbar.refresh=\u5237\u65b0\u76ee\u5f55
-FolderChooser.toolbar.recent=\u6700\u8fd1\uff1a:
+FolderChooser.new.title=\u5EFA\u7ACB\u65B0\u76EE\u5F55
+FolderChooser.new.folderName=\u8F93\u5165\u65B0\u76EE\u5F55\u540D\uFF1A
+FolderChooser.delete.title=\u786E\u8BA4\u5220\u9664\u76EE\u5F55
+FolderChooser.delete.header=\u60A8\u771F\u7684\u8981\u5220\u9664\u9009\u4E2D\u7684\u76EE\u5F55\u5417\uFF1F
+FolderChooser.delete.message1=\u60A8\u771F\u7684\u8981\u5220\u9664\u9009\u4E2D\u7684\u76EE\u5F55\u548C\u5B83\u7684\u6240\u6709\u5B50\u76EE\u5F55\u5417\uFF1F
+FolderChooser.delete.message2=\u60A8\u771F\u7684\u8981\u5220\u9664\u76EE\u5F55\u201C{0}\u201D\u548C\u5B83\u7684\u6240\u6709\u5B50\u76EE\u5F55\u5417\uFF1F
+FolderChooser.toolbar.desktop=\u9009\u4E2D\u684C\u9762
+FolderChooser.toolbar.home=\u9009\u4E2D\u4E3B\u76EE\u5F55
+FolderChooser.toolbar.mydocuments=\u9009\u4E2D\u6211\u7684\u6587\u6863
+FolderChooser.toolbar.delete=\u5220\u9664\u9009\u4E2D\u76EE\u5F55
+FolderChooser.toolbar.new=\u5728\u9009\u4E2D\u7684\u76EE\u5F55\u4E0B\u5EFA\u7ACB\u65B0\u76EE\u5F55
+FolderChooser.toolbar.refresh=\u5237\u65B0\u76EE\u5F55
+FolderChooser.toolbar.recent=\u6700\u8FD1\uFF1A:
