--- a/properties/com/jidesoft/swing/swing_ja.properties
+++ b/properties/com/jidesoft/swing/swing_ja.properties
@@ -1,33 +1,36 @@
 #
 # Strings for Searchable classes
 #
-Searchable.searchFor=\u691c\u7d22:
-Searchable.noMatch=(\u30de\u30c3\u30c1\u304c\u3042\u308a\u307e\u305b\u3093\u3067\u3057\u305f)
+Searchable.searchFor=\u691C\u7D22:
+Searchable.noMatch=(\u30DE\u30C3\u30C1\u304C\u3042\u308A\u307E\u305B\u3093\u3067\u3057\u305F)
 
 #
 # Strings for SearchableBar classes
 #
-SearchableBar.find=\u691c\u7d22(F):
+SearchableBar.find=\u691C\u7D22(F):
 SearchableBar.find.mnemonic=F
-SearchableBar.findNext=\u6b21\u3092\u691c\u7d22(N)
+SearchableBar.findNext=\u6B21\u3092\u691C\u7D22(N)
 SearchableBar.findNext.mnemonic=N
-SearchableBar.findNext.tooltip=\u30d5\u30ec\u30fc\u30ba\u306e\u6b21\u56de\u767a\u751f\u3092\u691c\u7d22
-SearchableBar.findPrevious=\u524d\u56de\u3092\u691c\u7d22(P)
+SearchableBar.findNext.tooltip=\u30D5\u30EC\u30FC\u30BA\u306E\u6B21\u56DE\u767A\u751F\u3092\u691C\u7D22
+SearchableBar.findPrevious=\u524D\u56DE\u3092\u691C\u7D22(P)
 SearchableBar.findPrevious.mnemonic=P
-SearchableBar.findPrevious.tooltip=\u30d5\u30ec\u30fc\u30ba\u306e\u524d\u56de\u767a\u751f\u3092\u691c\u7d22
-SearchableBar.highlights=\u30cf\u30a4\u30e9\u30a4\u30c8\u8868\u793a(H)
+SearchableBar.findPrevious.tooltip=\u30D5\u30EC\u30FC\u30BA\u306E\u524D\u56DE\u767A\u751F\u3092\u691C\u7D22
+SearchableBar.highlights=\u30CF\u30A4\u30E9\u30A4\u30C8\u8868\u793A(H)
 SearchableBar.highlights.mnemonic=H
-SearchableBar.highlights.tooltip=\u30d5\u30ec\u30fc\u30ba\u306e\u3059\u3079\u3066\u306e\u767a\u751f\u3092\u30cf\u30a4\u30e9\u30a4\u30c8\u8868\u793a
-SearchableBar.matchCase=\u5927\u6587\u5b57\u3068\u5c0f\u6587\u5b57\u304c\u30de\u30c3\u30c1(M)
+SearchableBar.highlights.tooltip=\u30D5\u30EC\u30FC\u30BA\u306E\u3059\u3079\u3066\u306E\u767A\u751F\u3092\u30CF\u30A4\u30E9\u30A4\u30C8\u8868\u793A
+SearchableBar.matchCase=\u5927\u6587\u5B57\u3068\u5C0F\u6587\u5B57\u304C\u30DE\u30C3\u30C1(M)
 SearchableBar.matchCase.mnemonic=M
-SearchableBar.repeats=\u53cd\u5fa9(R)
+SearchableBar.wholeWords=\u5358\u8A9E\u5168\u4F53
+SearchableBar.wholeWords.mnemonic=W
+SearchableBar.repeats=\u53CD\u5FA9(R)
 SearchableBar.repeats.mnemonic=R
 
-SearchableBar.reachedBottom=\u30da\u30fc\u30b8\u306e\u4e0b\u306b\u9054\u3057\u307e\u3057\u305f
-SearchableBar.reachedTop=\u30da\u30fc\u30b8\u306e\u4e0b\u306b\u9054\u3057\u307e\u3057\u305f
-SearchableBar.reachedBottomRepeat=\u30da\u30fc\u30b8\u306e\u4e0b\u306b\u9054\u3057\u307e\u3057\u305f\u3002\u4e0a\u304b\u3089\u7d9a\u3051\u307e\u3059
-SearchableBar.reachedTopRepeat=\u30da\u30fc\u30b8\u306e\u4e0a\u306b\u9054\u3057\u307e\u3057\u305f\u3002\u4e0b\u304b\u3089\u7d9a\u3051\u307e\u3059
-SearchableBar.notFound=\u30d5\u30ec\u30fc\u30ba\u304c\u898b\u3064\u304b\u308a\u307e\u305b\u3093\u3067\u3057\u305f
+SearchableBar.reachedBottom=\u30DA\u30FC\u30B8\u306E\u4E0B\u306B\u9054\u3057\u307E\u3057\u305F
+SearchableBar.reachedTop=\u30DA\u30FC\u30B8\u306E\u4E0B\u306B\u9054\u3057\u307E\u3057\u305F
+SearchableBar.reachedBottomRepeat=\u30DA\u30FC\u30B8\u306E\u4E0B\u306B\u9054\u3057\u307E\u3057\u305F\u3002\u4E0A\u304B\u3089\u7D9A\u3051\u307E\u3059
+SearchableBar.reachedTopRepeat=\u30DA\u30FC\u30B8\u306E\u4E0A\u306B\u9054\u3057\u307E\u3057\u305F\u3002\u4E0B\u304B\u3089\u7D9A\u3051\u307E\u3059
+SearchableBar.notFound=\u30D5\u30EC\u30FC\u30BA\u304C\u898B\u3064\u304B\u308A\u307E\u305B\u3093\u3067\u3057\u305F
+SearchableBar.matches=\u4E00\u81F4
 
 #
 # CheckBoxList
