--- a/properties/com/jidesoft/swing/swing_ko.properties
+++ b/properties/com/jidesoft/swing/swing_ko.properties
@@ -1,35 +1,38 @@
 #
 # Strings for Searchable classes
 #
-Searchable.searchFor=\uac80\uc0c9:
-Searchable.noMatch=(\ub9e4\uce58 \uc5c6\uc74c)
+Searchable.searchFor=\uAC80\uC0C9:
+Searchable.noMatch=(\uB9E4\uCE58 \uC5C6\uC74C)
 
 #
 # Strings for SearchableBar classes
 #
-SearchableBar.find=\ucc3e\uae30(F):
+SearchableBar.find=\uCC3E\uAE30(F):
 SearchableBar.find.mnemonic=F
-SearchableBar.findNext=\ub2e4\uc74c \ucc3e\uae30(N)
+SearchableBar.findNext=\uB2E4\uC74C \uCC3E\uAE30(N)
 SearchableBar.findNext.mnemonic=N
-SearchableBar.findNext.tooltip=\ub2e4\uc74c \uc5b4\uad6c \ucc3e\uae30
-SearchableBar.findPrevious=\uc774\uc804 \ucc3e\uae30(P)
+SearchableBar.findNext.tooltip=\uB2E4\uC74C \uC5B4\uAD6C \uCC3E\uAE30
+SearchableBar.findPrevious=\uC774\uC804 \uCC3E\uAE30(P)
 SearchableBar.findPrevious.mnemonic=P
-SearchableBar.findPrevious.tooltip=\uc774\uc804 \uc5b4\uad6c \ucc3e\uae30
-SearchableBar.highlights=\uac15\uc870\ud45c\uc2dc(H)
+SearchableBar.findPrevious.tooltip=\uC774\uC804 \uC5B4\uAD6C \uCC3E\uAE30
+SearchableBar.highlights=\uAC15\uC870\uD45C\uC2DC(H)
 SearchableBar.highlights.mnemonic=H
-SearchableBar.highlights.tooltip=\ubaa8\ub4e0 \uc5b4\uad6c \uac15\uc870\ud45c\uc2dc
-SearchableBar.matchCase=\ucf00\uc774\uc2a4 \ub9e4\uce58(M)
+SearchableBar.highlights.tooltip=\uBAA8\uB4E0 \uC5B4\uAD6C \uAC15\uC870\uD45C\uC2DC
+SearchableBar.matchCase=\uCF00\uC774\uC2A4 \uB9E4\uCE58(M)
 SearchableBar.matchCase.mnemonic=M
-SearchableBar.repeats=\ubc18\ubcf5(R)
+SearchableBar.wholeWords=\uC804\uCCB4 \uB2E8\uC5B4
+SearchableBar.wholeWords.mnemonic=W
+SearchableBar.repeats=\uBC18\uBCF5(R)
 SearchableBar.repeats.mnemonic=R
 
-SearchableBar.reachedBottom=\ud398\uc774\uc9c0 \ud558\ub2e8\uc5d0 \uc774\ub984
-SearchableBar.reachedTop=\ud398\uc774\uc9c0 \uc0c1\ub2e8\uc5d0 \uc774\ub984
-SearchableBar.reachedBottomRepeat=\ud398\uc774\uc9c0 \ud558\ub2e8\uc5d0 \uc774\ub984, \uc0c1\ub2e8\uc5d0\uc11c \uacc4\uc18d
-SearchableBar.reachedTopRepeat=\ud398\uc774\uc9c0 \uc0c1\ub2e8\uc5d0 \uc774\ub984, \ud558\ub2e8\uc5d0\uc11c \uacc4\uc18d
-SearchableBar.notFound=\uc5b4\uad6c\ub97c \ucc3e\uc744 \uc218 \uc5c6\uc74c
+SearchableBar.reachedBottom=\uD398\uC774\uC9C0 \uD558\uB2E8\uC5D0 \uC774\uB984
+SearchableBar.reachedTop=\uD398\uC774\uC9C0 \uC0C1\uB2E8\uC5D0 \uC774\uB984
+SearchableBar.reachedBottomRepeat=\uD398\uC774\uC9C0 \uD558\uB2E8\uC5D0 \uC774\uB984, \uC0C1\uB2E8\uC5D0\uC11C \uACC4\uC18D
+SearchableBar.reachedTopRepeat=\uD398\uC774\uC9C0 \uC0C1\uB2E8\uC5D0 \uC774\uB984, \uD558\uB2E8\uC5D0\uC11C \uACC4\uC18D
+SearchableBar.notFound=\uC5B4\uAD6C\uB97C \uCC3E\uC744 \uC218 \uC5C6\uC74C
+SearchableBar.matches=\uC77C\uCE58(\uB4E4)
 
 #
 # CheckBoxList
 #
-CheckBoxList.all=(\ubaa8\ub450)
+CheckBoxList.all=(\uBAA8\uB450)
