--- a/properties/com/jidesoft/swing/swing_nl.properties
+++ b/properties/com/jidesoft/swing/swing_nl.properties
@@ -20,6 +20,8 @@ SearchableBar.highlights.mnemonic=M
 SearchableBar.highlights.tooltip=Alle instanties van de zinsnede zoeken
 SearchableBar.matchCase=Hoofdlettergevoelig
 SearchableBar.matchCase.mnemonic=G
+SearchableBar.wholeWords=Hele woorden
+SearchableBar.wholeWords.mnemonic=W
 SearchableBar.repeats=Herhalingen
 SearchableBar.repeats.mnemonic=H
 
@@ -28,6 +30,7 @@ SearchableBar.reachedTop=Begin van pagina bereikt
 SearchableBar.reachedBottomRepeat=Einde van pagina bereikt, voortgezet vanaf begin pagina
 SearchableBar.reachedTopRepeat=Begin van pagina bereikt, voortgezet vanaf einde pagina
 SearchableBar.notFound=Zinsnede niet aangetroffen
+SearchableBar.matches=Overeenkomst(en)
 
 #
 # CheckBoxList
