--- a/properties/com/jidesoft/swing/swing_zh_CN.properties
+++ b/properties/com/jidesoft/swing/swing_zh_CN.properties
@@ -1,33 +1,36 @@
 #
 # Strings for Searchable classes
 #
-Searchable.searchFor=\u641c\u7d22:
-Searchable.noMatch=(\u65e0\u5339\u914d)
+Searchable.searchFor=\u641C\u7D22:
+Searchable.noMatch=(\u65E0\u5339\u914D)
 
 #
 # Strings for SearchableBar classes
 #
-SearchableBar.find=\u5bfb\u627e(F):
+SearchableBar.find=\u5BFB\u627E(F):
 SearchableBar.find.mnemonic=F
-SearchableBar.findNext=\u5bfb\u627e\u4e0b\u4e00\u4e2a(N)
+SearchableBar.findNext=\u5BFB\u627E\u4E0B\u4E00\u4E2A(N)
 SearchableBar.findNext.mnemonic=N
-SearchableBar.findNext.tooltip=\u5bfb\u627e\u4e0b\u4e00\u4e2a\u77ed\u8bed
-SearchableBar.findPrevious=\u5bfb\u627e\u4e0a\u4e00\u4e2a(P)
+SearchableBar.findNext.tooltip=\u5BFB\u627E\u4E0B\u4E00\u4E2A\u77ED\u8BED
+SearchableBar.findPrevious=\u5BFB\u627E\u4E0A\u4E00\u4E2A(P)
 SearchableBar.findPrevious.mnemonic=P
-SearchableBar.findPrevious.tooltip=\u5bfb\u627e\u4e0a\u4e00\u4e2a\u77ed\u8bed
-SearchableBar.highlights=\u9ad8\u4eae\u5ea6\u663e\u793a(H)
+SearchableBar.findPrevious.tooltip=\u5BFB\u627E\u4E0A\u4E00\u4E2A\u77ED\u8BED
+SearchableBar.highlights=\u9AD8\u4EAE\u5EA6\u663E\u793A(H)
 SearchableBar.highlights.mnemonic=H
-SearchableBar.highlights.tooltip=\u9ad8\u4eae\u5ea6\u663e\u793a\u6240\u6709\u77ed\u8bed
-SearchableBar.matchCase=\u5339\u914d\u5927\u5c0f\u5199(M)
+SearchableBar.highlights.tooltip=\u9AD8\u4EAE\u5EA6\u663E\u793A\u6240\u6709\u77ED\u8BED
+SearchableBar.matchCase=\u5339\u914D\u5927\u5C0F\u5199(M)
 SearchableBar.matchCase.mnemonic=M
-SearchableBar.repeats=\u91cd\u590d(R)
+SearchableBar.wholeWords=\u5168\u5B57\u5339\u914D
+SearchableBar.wholeWords.mnemonic=W
+SearchableBar.repeats=\u91CD\u590D(R)
 SearchableBar.repeats.mnemonic=R
 
-SearchableBar.reachedBottom=\u5df2\u5230\u8fbe\u9875\u9762\u5e95\u90e8
-SearchableBar.reachedTop=\u5df2\u5230\u8fbe\u9875\u9762\u9876\u90e8
-SearchableBar.reachedBottomRepeat=\u5df2\u5230\u8fbe\u9875\u9762\u5e95\u90e8\uff0c\u4ece\u9876\u90e8\u5f00\u59cb
-SearchableBar.reachedTopRepeat=\u5df2\u5230\u8fbe\u9875\u9762\u9876\u90e8\uff0c\u4ece\u5e95\u90e8\u5f00\u59cb
-SearchableBar.notFound=\u672a\u627e\u5230\u77ed\u8bed
+SearchableBar.reachedBottom=\u5DF2\u5230\u8FBE\u9875\u9762\u5E95\u90E8
+SearchableBar.reachedTop=\u5DF2\u5230\u8FBE\u9875\u9762\u9876\u90E8
+SearchableBar.reachedBottomRepeat=\u5DF2\u5230\u8FBE\u9875\u9762\u5E95\u90E8\uFF0C\u4ECE\u9876\u90E8\u5F00\u59CB
+SearchableBar.reachedTopRepeat=\u5DF2\u5230\u8FBE\u9875\u9762\u9876\u90E8\uFF0C\u4ECE\u5E95\u90E8\u5F00\u59CB
+SearchableBar.notFound=\u672A\u627E\u5230\u77ED\u8BED
+SearchableBar.matches=\u5339\u914D
 
 #
 # CheckBoxList
