--- a/properties/com/jidesoft/converter/converter_ja.properties
+++ b/properties/com/jidesoft/converter/converter_ja.properties
@@ -1,5 +1,22 @@
-# @(#) converter_ja.properties
-
-
+#
+#Strings for BooleanConverter
+#
 Boolean.true=True
 Boolean.false=False
+
+#
+#Strings for FontConverter
+#
+Font.plain=\u30D7\u30EC\u30FC\u30F3
+Font.bold=\u592A\u5B57
+Font.italic=\u659C\u4F53
+Font.boldItalic=\u592A\u5B57\u659C\u4F53
+
+#
+#Strings for QuarterConverter
+#
+Quarter.quarter=Qtr {0}
+#Please note, there is a space at the end of Qtr.
+
+Range.range={0} - {1}
+Range.multiple=(\u8907\u6570)
