--- a/properties/com/jidesoft/converter/converter_nl.properties
+++ b/properties/com/jidesoft/converter/converter_nl.properties
@@ -1,5 +1,22 @@
-# @(#) converter_nl.properties
-
-
+#
+#Strings for BooleanConverter
+#
 Boolean.true=Waar
 Boolean.false=Onwaar
+
+#
+#Strings for FontConverter
+#
+Font.plain=Normaal
+Font.bold=Vet
+Font.italic=Cursief
+Font.boldItalic=Vet/cursief
+
+#
+#Strings for QuarterConverter
+#
+Quarter.quarter=Qtr {0}
+#Please note, there is a space at the end of Qtr.
+
+Range.range={0} - {1}
+Range.multiple=(Meervoudig)
