--- a/properties/com/jidesoft/dialog/buttons_ko.properties
+++ b/properties/com/jidesoft/dialog/buttons_ko.properties
@@ -10,80 +10,80 @@ Button.yes=\uC608(Y)
 
 Button.no=\uC544\uB2C8\uC624(N)
 
-Button.apply=\uc801\uc6a9(A)
+Button.apply=\uC801\uC6A9(A)
 Button.apply.mnemonic=A
 
-Button.back=< \ub4a4\ub85c(B)
+Button.back=< \uB4A4\uB85C(B)
 Button.back.mnemonic=B
 
-Button.browse=\ucc3e\uc544\ubcf4\uae30(B)
+Button.browse=\uCC3E\uC544\uBCF4\uAE30(B)
 Button.browse.mnemonic=B
 
-Button.clear=\uc0ad\uc81c(C)
+Button.clear=\uC0AD\uC81C(C)
 Button.clear.mnemonic=C
 
-Button.close=\ub2eb\uae30(C)
+Button.close=\uB2EB\uAE30(C)
 Button.close.mnemonic=C
 
-Button.continue=\uacc4\uc18d(C)
+Button.continue=\uACC4\uC18D(C)
 Button.continue.mnemonic=C
 
-Button.edit=\ud3b8\uc9d1(E)
+Button.edit=\uD3B8\uC9D1(E)
 Button.edit.mnemonic=E
 
-Button.exit=\uc885\ub8cc(X)
+Button.exit=\uC885\uB8CC(X)
 Button.exit.mnemonic=X
 
-Button.find=\ucc3e\uae30(F)
+Button.find=\uCC3E\uAE30(F)
 Button.find.mnemonic=F
 
-Button.findNext=\ub2e4\uc74c \ucc3e\uae30(N)
+Button.findNext=\uB2E4\uC74C \uCC3E\uAE30(N)
 Button.findNext.mnemonic=N
 
-Button.finish=\ub05d\ub0b4\uae30(F)
+Button.finish=\uB05D\uB0B4\uAE30(F)
 Button.finish.mnemonic=F
 
-Button.forward=\uc55e\uc73c\ub85c(F)
+Button.forward=\uC55E\uC73C\uB85C(F)
 Button.forward.mnemonic=F
 
-Button.goback=\ub4a4\ub85c \uac00\uae30(G)
+Button.goback=\uB4A4\uB85C \uAC00\uAE30(G)
 Button.goback.mnemonic=G
 
-Button.help=\ub3c4\uc6c0\ub9d0(H)
+Button.help=\uB3C4\uC6C0\uB9D0(H)
 Button.help.mnemonic=H
 
-Button.new=\uc0c8\ub85c \ub9cc\ub4e4\uae30(N)
+Button.new=\uC0C8\uB85C \uB9CC\uB4E4\uAE30(N)
 Button.new.mnemonic=N
 
-Button.next=\ub2e4\uc74c(N) >
+Button.next=\uB2E4\uC74C(N) >
 Button.next.mnemonic=N
 
-Button.open=\uc5f4\uae30(O)
+Button.open=\uC5F4\uAE30(O)
 Button.open.mnemonic=O
 
-Button.print=\uc778\uc1c4(P)
+Button.print=\uC778\uC1C4(P)
 Button.print.mnemonic=P
 
-Button.replace=\ubcc0\uacbd(R)
+Button.replace=\uBCC0\uACBD(R)
 Button.replace.mnemonic=R
 
-Button.retry=\uc7ac\uc2dc\ub3c4(R)
+Button.retry=\uC7AC\uC2DC\uB3C4(R)
 Button.retry.mnemonic=R
 
-Button.run=\uc2e4\ud589(R)
+Button.run=\uC2E4\uD589(R)
 Button.run.mnemonic=R
 
-Button.save=\uc800\uc7a5(S)
+Button.save=\uC800\uC7A5(S)
 Button.save.mnemonic=S
 
-Button.saveAs=\ub2e4\ub978 \uc774\ub984\uc73c\ub85c \uc800\uc7a5(A)
+Button.saveAs=\uB2E4\uB978 \uC774\uB984\uC73C\uB85C \uC800\uC7A5(A)
 Button.saveAs.mnemonic=A
 
-Button.stop=\uc815\uc9c0(S)
+Button.stop=\uC815\uC9C0(S)
 Button.stop.mnemonic=S
 
-Button.showDetails=\uc138\ubd80\uc0ac\ud56d(D) >>
+Button.showDetails=\uC138\uBD80\uC0AC\uD56D(D) >>
 Button.showDetails.mnemonic=D
 
-Button.hideDetails=<< \uc138\ubd80\uc0ac\ud56d(D)
+Button.hideDetails=<< \uC138\uBD80\uC0AC\uD56D(D)
 Button.hideDetails.mnemonic=D
