--- a/properties/com/jidesoft/dialog/buttons_zh_CN.properties
+++ b/properties/com/jidesoft/dialog/buttons_zh_CN.properties
@@ -2,88 +2,88 @@
 #Buttons
 #
 
-Button.ok=\u786e\u5b9a
+Button.ok=\u786E\u5B9A
 
-Button.cancel=\u53d6\u6d88
+Button.cancel=\u53D6\u6D88
 
-Button.yes=\u662f(Y)
+Button.yes=\u662F(Y)
 
 Button.no=\u5426(N)
 
-Button.apply=\u5e94\u7528(A)
+Button.apply=\u5E94\u7528(A)
 Button.apply.mnemonic=A
 
-Button.back=< \u4e0a\u4e00\u6b65(B)
+Button.back=< \u4E0A\u4E00\u6B65(B)
 Button.back.mnemonic=B
 
-Button.browse=\u6d4f\u89c8(B)
+Button.browse=\u6D4F\u89C8(B)
 Button.browse.mnemonic=B
 
-Button.clear=\u6e05\u9664(C)
+Button.clear=\u6E05\u9664(C)
 Button.clear.mnemonic=C
 
-Button.close=\u5173\u95ed(C)
+Button.close=\u5173\u95ED(C)
 Button.close.mnemonic=C
 
-Button.continue=\u7ee7\u7eed(C)
+Button.continue=\u7EE7\u7EED(C)
 Button.continue.mnemonic=C
 
-Button.edit=\u7f16\u8f91(E)
+Button.edit=\u7F16\u8F91(E)
 Button.edit.mnemonic=E
 
-Button.exit=\u9000\u51fa(X)
+Button.exit=\u9000\u51FA(X)
 Button.exit.mnemonic=X
 
-Button.find=\u5bfb\u627e(F)
+Button.find=\u5BFB\u627E(F)
 Button.find.mnemonic=F
 
-Button.findNext=\u5bfb\u627e\u4e0b\u4e00\u4e2a(N)
+Button.findNext=\u5BFB\u627E\u4E0B\u4E00\u4E2A(N)
 Button.findNext.mnemonic=N
 
-Button.finish=\u7ed3\u675f(F)
+Button.finish=\u7ED3\u675F(F)
 Button.finish.mnemonic=F
 
-Button.forward=\u5411\u524d(F)
+Button.forward=\u5411\u524D(F)
 Button.forward.mnemonic=F
 
-Button.goback=\u9000\u56de(G)
+Button.goback=\u9000\u56DE(G)
 Button.goback.mnemonic=G
 
-Button.help=\u5e2e\u52a9(H)
+Button.help=\u5E2E\u52A9(H)
 Button.help.mnemonic=H
 
-Button.new=\u65b0\u5efa(N)
+Button.new=\u65B0\u5EFA(N)
 Button.new.mnemonic=N
 
-Button.next=\u4e0b\u4e00\u6b65(N) >
+Button.next=\u4E0B\u4E00\u6B65(N) >
 Button.next.mnemonic=N
 
-Button.open=\u6253\u5f00(O)
+Button.open=\u6253\u5F00(O)
 Button.open.mnemonic=O
 
 Button.print=\u6253\u5370(P)
 Button.print.mnemonic=P
 
-Button.replace=\u66ff\u6362(R)
+Button.replace=\u66FF\u6362(R)
 Button.replace.mnemonic=R
 
-Button.retry=\u91cd\u8bd5(R)
+Button.retry=\u91CD\u8BD5(R)
 Button.retry.mnemonic=R
 
-Button.run=\u8fd0\u884c(R)
+Button.run=\u8FD0\u884C(R)
 Button.run.mnemonic=R
 
-Button.save=\u4fdd\u5b58
+Button.save=\u4FDD\u5B58
 Button.save.mnemonic=S
 
-Button.saveAs=\u4fdd\u5b58\u4e3a(A)
+Button.saveAs=\u4FDD\u5B58\u4E3A(A)
 Button.saveAs.mnemonic=A
 
-Button.stop=\u505c\u6b62(S)
+Button.stop=\u505C\u6B62(S)
 Button.stop.mnemonic=S
 
-Button.showDetails=\u8be6\u7ec6\u60c5\u51b5(D) >>
+Button.showDetails=\u8BE6\u7EC6\u60C5\u51B5(D) >>
 Button.showDetails.mnemonic=D
 
-Button.hideDetails=<< \u8be6\u7ec6\u60c5\u51b5(D)
+Button.hideDetails=<< \u8BE6\u7EC6\u60C5\u51B5(D)
 Button.hideDetails.mnemonic=D
