--- a/properties/com/jidesoft/plaf/basic/basic_de.properties
+++ b/properties/com/jidesoft/plaf/basic/basic_de.properties
@@ -5,9 +5,9 @@
 #
 # Button actions
 #
-DockableFrameTitlePane.closeText=Schlie\u00dfen
+DockableFrameTitlePane.closeText=Schlie\u00DFen
 DockableFrameTitlePane.closeMnemonic=S
-DockableFrameTitlePane.closeTooltip=Schlie\u00dfen
+DockableFrameTitlePane.closeTooltip=Schlie\u00DFen
 
 DockableFrameTitlePane.hideAutohideText=Ausblenden
 DockableFrameTitlePane.hideAutohideMnemonic=A
@@ -31,7 +31,7 @@ DockableFrameTitlePane.restoreMnemonic=W
 DockableFrameTitlePane.maximizeTooltip=Maximieren/Wiederherstellen
 
 #
-# Dockableframe attributes
+# DockableFrame attributes
 #
 DockableFrameTitlePane.dockableText=Andockbar
 DockableFrameTitlePane.dockableMnemonic=N
@@ -55,7 +55,7 @@ Undo.toggle=Schwebe-/Andockmodus ein/aus
 Undo.toggleAutohide=Autom. Ausblend-/Andockmodus ein/aus
 Undo.maximize=Maximieren
 Undo.restore=Wiederherstellen
-Undo.resizing=Gr\u00f6\u00dfe \u00e4ndern
+Undo.resizing=Gr\u00F6\u00DFe \u00E4ndern
 Undo.moving=Verschieben
 
 #
@@ -67,7 +67,7 @@ CollapsiblePane.collapseToolTip=Inhalt erweitern oder zusammenfassen
 #
 # Strings for JideTabbedPane
 #
-JideTabbedPane.scrollBackward=Zur\u00fcck scrollen
-JideTabbedPane.scrollForward=Vorw\u00e4rts scrollen
+JideTabbedPane.scrollBackward=Zur\u00FCck scrollen
+JideTabbedPane.scrollForward=Vorw\u00E4rts scrollen
 JideTabbedPane.showList=Liste anzeigen
 JideTabbedPane.close=Schliessen
