--- a/properties/com/jidesoft/plaf/basic/basic_ja.properties
+++ b/properties/com/jidesoft/plaf/basic/basic_ja.properties
@@ -5,68 +5,69 @@
 #
 # Button actions
 #
-DockableFrameTitlePane.closeText=\u9589\u3058\u308b(C)
+DockableFrameTitlePane.closeText=\u9589\u3058\u308B(C)
 DockableFrameTitlePane.closeMnemonic=C
-DockableFrameTitlePane.closeTooltip=\u9589\u3058\u308b
+DockableFrameTitlePane.closeTooltip=\u9589\u3058\u308B
 
-DockableFrameTitlePane.hideAutohideText=\u975e\u8868\u793a(H)
+DockableFrameTitlePane.hideAutohideText=\u975E\u8868\u793A(H)
 DockableFrameTitlePane.hideAutohideMnemonic=H
-DockableFrameTitlePane.hideAutohideTooltip=\u975e\u8868\u793a
+DockableFrameTitlePane.hideAutohideTooltip=\u975E\u8868\u793A
 
-DockableFrameTitlePane.floatingText=\u30d5\u30ed\u30fc\u30c6\u30a3\u30f3\u30b0(F)
+DockableFrameTitlePane.floatingText=\u30D5\u30ED\u30FC\u30C6\u30A3\u30F3\u30B0(F)
 DockableFrameTitlePane.floatingMnemonic=F
-DockableFrameTitlePane.floatingTooltip=\u30d5\u30ed\u30fc\u30c6\u30a3\u30f3\u30b0\u306e\u5207\u308a\u66ff\u3048
+DockableFrameTitlePane.floatingTooltip=\u30D5\u30ED\u30FC\u30C6\u30A3\u30F3\u30B0\u306E\u5207\u308A\u66FF\u3048
 
-DockableFrameTitlePane.autohideText=\u81ea\u52d5\u7684\u306b\u96a0\u3059(A)
+DockableFrameTitlePane.autohideText=\u81EA\u52D5\u7684\u306B\u96A0\u3059(A)
 DockableFrameTitlePane.autohideMnemonic=A
 ## for both autohide button and stop autohide button since it is a toggle button
-DockableFrameTitlePane.autohideTooltip=\u81ea\u52d5\u975e\u8868\u793a\u306e\u5207\u308a\u66ff\u3048
+DockableFrameTitlePane.autohideTooltip=\u81EA\u52D5\u975E\u8868\u793A\u306E\u5207\u308A\u66FF\u3048
 
 DockableFrameTitlePane.maximizeText=\u6700\u5927\u5316(M)
 DockableFrameTitlePane.maximizeMnemonic=M
 
-DockableFrameTitlePane.restoreText=\u5143\u306e\u30b5\u30a4\u30ba\u306b\u623b\u3059(R)
+DockableFrameTitlePane.restoreText=\u5143\u306E\u30B5\u30A4\u30BA\u306B\u623B\u3059(R)
 DockableFrameTitlePane.restoreMnemonic=R
 ## for both maximize button and restore button since it is a toggle button
-DockableFrameTitlePane.maximizeTooltip=\u6700\u5927\u5316/\u5143\u306e\u30b5\u30a4\u30ba\u306b\u623b\u3059
+DockableFrameTitlePane.maximizeTooltip=\u6700\u5927\u5316/\u5143\u306E\u30B5\u30A4\u30BA\u306B\u623B\u3059
 
 #
-# Dockableframe attributes
+# DockableFrame attributes
 #
-DockableFrameTitlePane.dockableText=\u30c9\u30c3\u30ad\u30f3\u30b0\u53ef\u80fd(D)
+DockableFrameTitlePane.dockableText=\u30C9\u30C3\u30AD\u30F3\u30B0\u53EF\u80FD(D)
 DockableFrameTitlePane.dockableMnemonic=D
+DockableFrameTitlePane.dockableTooltip=\u30C9\u30C3\u30AD\u30F3\u30B0\u53EF\u80FD\u306E\u5207\u308A\u66FF\u3048
 
-DockableFrameTitlePane.hidableText=\u975e\u8868\u793a\u53ef\u80fd(I)
+DockableFrameTitlePane.hidableText=\u975E\u8868\u793A\u53EF\u80FD(I)
 DockableFrameTitlePane.hidableMnemonic=I
 
-DockableFrameTitlePane.floatableText=\u30d5\u30ed\u30fc\u30c6\u30a3\u30f3\u30b0\u53ef\u80fd(L)
+DockableFrameTitlePane.floatableText=\u30D5\u30ED\u30FC\u30C6\u30A3\u30F3\u30B0\u53EF\u80FD(L)
 DockableFrameTitlePane.floatableMnemonic=L
 
-DockableFrameTitlePane.autohidableText=\u81ea\u52d5\u975e\u8868\u793a\u53ef\u80fd(U)
+DockableFrameTitlePane.autohidableText=\u81EA\u52D5\u975E\u8868\u793A\u53EF\u80FD(U)
 DockableFrameTitlePane.autohidableMnemonic=U
 
 #
 # Strings for Undo
 #
-#### TO BE TRANSLATED ###
 Undo.dragging=Dragging
 Undo.hide=Hide
 Undo.toggle=Toggle Floating/Docking Mode
 Undo.toggleAutohide=Toggle Autohidden/Docking Mode
 Undo.maximize=\u6700\u5927\u5316
-Undo.restore=\u5143\u306e\u30b5\u30a4\u30ba\u306b\u623b\u3059
-#### End of TO BE TRANSLATED ###
+Undo.restore=\u5143\u306E\u30B5\u30A4\u30BA\u306B\u623B\u3059
+Undo.resizing=\u30EA\u30B5\u30A4\u30BA\u4E2D
+Undo.moving=\u79FB\u52D5\u4E2D
 
 #
 # Strings for CollapsiblePane
 #
-CollapsiblePane.collapseText=\u5c55\u958b/\u6298\u308a\u305f\u305f\u307f
-CollapsiblePane.collapseToolTip=\u5185\u5bb9\u306e\u5c55\u958b/\u6298\u308a\u305f\u305f\u307f
+CollapsiblePane.collapseText=\u5C55\u958B/\u6298\u308A\u305F\u305F\u307F
+CollapsiblePane.collapseToolTip=\u5185\u5BB9\u306E\u5C55\u958B/\u6298\u308A\u305F\u305F\u307F
 
 #
 # Strings for JideTabbedPane
 #
-JideTabbedPane.scrollBackward=\u5de6\u3078\u30b9\u30af\u30ed\u30fc\u30eb\u3059\u308b
-JideTabbedPane.scrollForward=\u53f3\u3078\u30b9\u30af\u30ed\u30fc\u30eb\u3059\u308b
-JideTabbedPane.showList=\u30ea\u30b9\u30c8\u3092\u8868\u793a\u3059\u308b
-JideTabbedPane.close=\u9589\u3058\u308b
+JideTabbedPane.scrollBackward=\u5DE6\u3078\u30B9\u30AF\u30ED\u30FC\u30EB\u3059\u308B
+JideTabbedPane.scrollForward=\u53F3\u3078\u30B9\u30AF\u30ED\u30FC\u30EB\u3059\u308B
+JideTabbedPane.showList=\u30EA\u30B9\u30C8\u3092\u8868\u793A\u3059\u308B
+JideTabbedPane.close=\u9589\u3058\u308B
