--- a/properties/com/jidesoft/plaf/basic/basic_ko.properties
+++ b/properties/com/jidesoft/plaf/basic/basic_ko.properties
@@ -5,55 +5,69 @@
 #
 # Button actions
 #
-DockableFrameTitlePane.closeText=\ub2eb\uae30
+DockableFrameTitlePane.closeText=\uB2EB\uAE30
 DockableFrameTitlePane.closeMnemonic=C
-DockableFrameTitlePane.closeTooltip=\ub2eb\uae30
+DockableFrameTitlePane.closeTooltip=\uB2EB\uAE30
 
-DockableFrameTitlePane.hideAutohideText=\uc228\uae30\uae30
+DockableFrameTitlePane.hideAutohideText=\uC228\uAE30\uAE30
 DockableFrameTitlePane.hideAutohideMnemonic=H
-DockableFrameTitlePane.hideAutohideTooltip=\ud65c\uc131 \uc790\ub3d9 \uc228\uae30\uae30 \ucc3d \uc228\uae30\uae30
+DockableFrameTitlePane.hideAutohideTooltip=\uD65C\uC131 \uC790\uB3D9 \uC228\uAE30\uAE30 \uCC3D \uC228\uAE30\uAE30
 
-DockableFrameTitlePane.floatingText=\ubd80\ub3d9
+DockableFrameTitlePane.floatingText=\uBD80\uB3D9
 DockableFrameTitlePane.floatingMnemonic=F
-DockableFrameTitlePane.floatingTooltip=\ubd80\ub3d9 \uc804\ud658
+DockableFrameTitlePane.floatingTooltip=\uBD80\uB3D9 \uC804\uD658
 
-DockableFrameTitlePane.autohideText=\uc790\ub3d9 \uc228\uae30\uae30
+DockableFrameTitlePane.autohideText=\uC790\uB3D9 \uC228\uAE30\uAE30
 DockableFrameTitlePane.autohideMnemonic=A
-DockableFrameTitlePane.autohideTooltip=\uc790\ub3d9 \uc228\uae30\uae30 \uc804\ud658
+## for both autohide button and stop autohide button since it is a toggle button
+DockableFrameTitlePane.autohideTooltip=\uC790\uB3D9 \uC228\uAE30\uAE30 \uC804\uD658
 
-DockableFrameTitlePane.maximizeText=\ucd5c\ub300\ud654
+DockableFrameTitlePane.maximizeText=\uCD5C\uB300\uD654
 DockableFrameTitlePane.maximizeMnemonic=M
-DockableFrameTitlePane.maximizeTooltip=\ucd5c\ub300\ud654/\ubcf5\uc6d0
-DockableFrameTitlePane.restoreText=\ubcf5\uc6d0
+
+DockableFrameTitlePane.restoreText=\uBCF5\uC6D0
 DockableFrameTitlePane.restoreMnemonic=R
+## for both maximize button and restore button since it is a toggle button
+DockableFrameTitlePane.maximizeTooltip=\uCD5C\uB300\uD654/\uBCF5\uC6D0
 
 #
-# Dockableframe attributes
+# DockableFrame attributes
 #
-DockableFrameTitlePane.dockableText=\ub3c4\ud0b9 \uac00\ub2a5
+DockableFrameTitlePane.dockableText=\uB3C4\uD0B9 \uAC00\uB2A5
 DockableFrameTitlePane.dockableMnemonic=D
+DockableFrameTitlePane.dockableTooltip=Dockable \uD1A0\uAE00\uB9C1
 
-DockableFrameTitlePane.hidableText=\uc228\uae30\uae30 \uac00\ub2a5
+DockableFrameTitlePane.hidableText=\uC228\uAE30\uAE30 \uAC00\uB2A5
 DockableFrameTitlePane.hidableMnemonic=I
 
-DockableFrameTitlePane.floatableText=\ubd80\ub3d9 \uac00\ub2a5
+DockableFrameTitlePane.floatableText=\uBD80\uB3D9 \uAC00\uB2A5
 DockableFrameTitlePane.floatableMnemonic=L
 
-DockableFrameTitlePane.autohidableText=\uc790\ub3d9 \uc228\uae30\uae30 \uac00\ub2a5
+DockableFrameTitlePane.autohidableText=\uC790\uB3D9 \uC228\uAE30\uAE30 \uAC00\uB2A5
 DockableFrameTitlePane.autohidableMnemonic=U
 
 #
 # Strings for Undo
 #
-Undo.dragging=\ub04c\uae30
-Undo.hide=\uc228\uae30\uae30
-Undo.toggle=\ubd80\ub3d9/\ub3c4\ud0b9 \ubaa8\ub4dc \uc804\ud658
-Undo.toggleAutohide=\uc790\ub3d9 \uc228\uae40/\ub3c4\ud0b9 \ubaa8\ub4dc \uc804\ud658
-Undo.maximize=\ucd5c\ub300\ud654
-Undo.restore=\ubcf5\uc6d0
+Undo.dragging=\uB04C\uAE30
+Undo.hide=\uC228\uAE30\uAE30
+Undo.toggle=\uBD80\uB3D9/\uB3C4\uD0B9 \uBAA8\uB4DC \uC804\uD658
+Undo.toggleAutohide=\uC790\uB3D9 \uC228\uAE40/\uB3C4\uD0B9 \uBAA8\uB4DC \uC804\uD658
+Undo.maximize=\uCD5C\uB300\uD654
+Undo.restore=\uBCF5\uC6D0
+Undo.resizing=\uD06C\uAE30 \uC870\uC808
+Undo.moving=\uC774\uB3D9
 
 #
 # Strings for CollapsiblePane
 #
-CollapsiblePane.collapseText=\ud655\uc7a5/\ucd95\uc18c
-CollapsiblePane.collapseToolTip=\ub0b4\uc6a9\uc744 \ud655\uc7a5\ud558\uac70\ub098 \ucd95\uc18c\ud569\ub2c8\ub2e4
+CollapsiblePane.collapseText=\uD655\uC7A5/\uCD95\uC18C
+CollapsiblePane.collapseToolTip=\uB0B4\uC6A9\uC744 \uD655\uC7A5\uD558\uAC70\uB098 \uCD95\uC18C\uD569\uB2C8\uB2E4
+
+#
+# Strings for JideTabbedPane
+#
+JideTabbedPane.scrollBackward=\uB4A4\uB85C \uC2A4\uD06C\uB864
+JideTabbedPane.scrollForward=\uC55E\uC73C\uB85C \uC2A4\uD06C\uB864
+JideTabbedPane.showList=\uBAA9\uB85D \uD45C\uC2DC
+JideTabbedPane.close=\uB2EB\uAE30
