--- a/properties/com/jidesoft/plaf/basic/folderChooser_de.properties
+++ b/properties/com/jidesoft/plaf/basic/folderChooser_de.properties
@@ -3,12 +3,14 @@
 #
 FolderChooser.new.title=Neuen Ordner erstellen
 FolderChooser.new.folderName=Bitte Namen des neuen Ordners eingeben:
-FolderChooser.delete.title=L\u00f6schen von Order best\u00e4tigen
-FolderChooser.delete.header=Ausgew\u00e4hlte Ordner wirklich l\u00f6schen?
-FolderChooser.delete.message1=M\u00f6chten Sie wirklich diesen Ordner und alle Unterordner l\u00f6schen?
-FolderChooser.delete.message2=M\u00f6chten Sie wirklich {0} Ordner und alle Unterordner l\u00f6schen?
+FolderChooser.delete.title=L\u00F6schen von Order best\u00E4tigen
+FolderChooser.delete.header=Ausgew\u00E4hlte Ordner wirklich l\u00F6schen?
+FolderChooser.delete.message1=M\u00F6chten Sie wirklich diesen Ordner und alle Unterordner l\u00F6schen?
+FolderChooser.delete.message2=M\u00F6chten Sie wirklich {0} Ordner und alle Unterordner l\u00F6schen?
 FolderChooser.toolbar.desktop=Zum Desktop springen
 FolderChooser.toolbar.home=Zu 'Home' springen
 FolderChooser.toolbar.mydocuments=Zu 'Meine Dokumente' springen
-FolderChooser.toolbar.delete=Ausgew\u00e4hlten Ordner l\u00f6schen
-FolderChooser.toolbar.new=Neuen Ordner unter dem ausgew\u00e4hlten Ordner anlegen
+FolderChooser.toolbar.delete=Ausgew\u00E4hlten Ordner l\u00F6schen
+FolderChooser.toolbar.new=Neuen Ordner unter dem ausgew\u00E4hlten Ordner anlegen
+FolderChooser.toolbar.refresh=Ordneransicht aktualisieren, sodass \u00C4nderungen an externen Ordnern gezeigt werden
+FolderChooser.toolbar.recent=Neueste:
