--- a/properties/com/jidesoft/swing/swing_pt_BR.properties
+++ b/properties/com/jidesoft/swing/swing_pt_BR.properties
@@ -9,25 +9,28 @@ Searchable.noMatch=(nenhum resultado)
 #
 SearchableBar.find=Localizar:
 SearchableBar.find.mnemonic=L
-SearchableBar.findNext=Localizar pr\u00f3xima
+SearchableBar.findNext=Localizar pr\u00F3xima
 SearchableBar.findNext.mnemonic=s
-SearchableBar.findNext.tooltip=Localizar a pr\u00f3xima ocorr\u00eancia da frase
+SearchableBar.findNext.tooltip=Localizar a pr\u00F3xima ocorr\u00EAncia da frase
 SearchableBar.findPrevious=Localizar anterior
 SearchableBar.findPrevious.mnemonic=a
-SearchableBar.findPrevious.tooltip=Localizar a ocorr\u00eancia anterior da frase
+SearchableBar.findPrevious.tooltip=Localizar a ocorr\u00EAncia anterior da frase
 SearchableBar.highlights=Realce
 SearchableBar.highlights.mnemonic=R
-SearchableBar.highlights.tooltip=Real\u00e7a todas as ocorr\u00eancias da frase
-SearchableBar.matchCase=Sens\u00edvel a mai\u00fasculas e min\u00fasculas
+SearchableBar.highlights.tooltip=Real\u00E7a todas as ocorr\u00EAncias da frase
+SearchableBar.matchCase=Sens\u00EDvel a mai\u00FAsculas e min\u00FAsculas
 SearchableBar.matchCase.mnemonic=S
-SearchableBar.repeats=Repeti\u00e7\u00f5es
+SearchableBar.wholeWords=Palavras Inteiras
+SearchableBar.wholeWords.mnemonic=W
+SearchableBar.repeats=Repeti\u00E7\u00F5es
 SearchableBar.repeats.mnemonic=R
 
-SearchableBar.reachedBottom=Chegou ao final da p\u00e1gina
-SearchableBar.reachedTop=Chegou \u00e0 parte superior da p\u00e1gina
-SearchableBar.reachedBottomRepeat=Chegou ao final da p\u00e1gina, continua\u00e7\u00e3o da parte superior da p\u00e1gina
-SearchableBar.reachedTopRepeat=Chegou \u00e0 parte superior da p\u00e1gina, continua\u00e7\u00e3o do final da p\u00e1gina
-SearchableBar.notFound=Frase n\u00e3o encontrada
+SearchableBar.reachedBottom=Chegou ao final da p\u00E1gina
+SearchableBar.reachedTop=Chegou \u00E0 parte superior da p\u00E1gina
+SearchableBar.reachedBottomRepeat=Chegou ao final da p\u00E1gina, continua\u00E7\u00E3o da parte superior da p\u00E1gina
+SearchableBar.reachedTopRepeat=Chegou \u00E0 parte superior da p\u00E1gina, continua\u00E7\u00E3o do final da p\u00E1gina
+SearchableBar.notFound=Frase n\u00E3o encontrada
+SearchableBar.matches=Correspond\u00EAncia(s)
 
 #
 # CheckBoxList
