integrate properties files

--- a/properties/com/jidesoft/converter/converter_fr_CA.properties
+++ b/properties/com/jidesoft/converter/converter_fr_CA.properties
@@ -1,22 +1,22 @@
 #
 #Strings for BooleanConverter
 #
-Boolean.true=Ja
-Boolean.false=Nein
+Boolean.true=Vrai
+Boolean.false=Faux
 
 #
 #Strings for FontConverter
 #
-Font.plain=Normal
-Font.bold=Fett
-Font.italic=Kursiv
-Font.boldItalic=Fett kursiv
+Font.plain=Simple
+Font.bold=Gras
+Font.italic=Italique
+Font.boldItalic=Gras italique
 
 #
 #Strings for QuarterConverter
 #
-Quarter.quarter=Quartal {0}
+Quarter.quarter=Qtr {0}
 #Please note, there is a space at the end of Qtr.
 
 Range.range={0} - {1}
-Range.multiple=(Mehrfach)
+Range.multiple=(Multiple)
