--- a/properties/com/jidesoft/converter/converter_pt_BR.properties
+++ b/properties/com/jidesoft/converter/converter_pt_BR.properties
@@ -1,16 +1,16 @@
 #
 #Strings for BooleanConverter
 #
-Boolean.true=Waar
-Boolean.false=Onwaar
+Boolean.true=Verdadeiro
+Boolean.false=Falso
 
 #
 #Strings for FontConverter
 #
-Font.plain=Normaal
-Font.bold=Vet
-Font.italic=Cursief
-Font.boldItalic=Vet/cursief
+Font.plain=Sem Formata\u00E7\u00E3o
+Font.bold=Negrito
+Font.italic=It\u00E1lico
+Font.boldItalic=NegritoIt\u00E1lico
 
 #
 #Strings for QuarterConverter
@@ -19,4 +19,4 @@ Quarter.quarter=Qtr {0}
 #Please note, there is a space at the end of Qtr.
 
 Range.range={0} - {1}
-Range.multiple=(Meervoudig)
+Range.multiple=(V\u00E1rios)
