--- a/properties/com/jidesoft/converter/converter_da.properties
+++ b/properties/com/jidesoft/converter/converter_da.properties
@@ -16,4 +16,7 @@ Font.boldItalic=Fed kursiv
 #Strings for QuarterConverter
 #
 Quarter.quarter=Qtr {0}
-#Plesae note, there is a space at the end of Qtr.
+#Please note, there is a space at the end of Qtr.
+
+Range.range={0} - {1}
+Range.multiple=(Flere)
