--- a/properties/com/jidesoft/dialog/buttons_da.properties
+++ b/properties/com/jidesoft/dialog/buttons_da.properties
@@ -2,6 +2,14 @@
 #Buttons
 #
 
+Button.ok=OK
+
+Button.cancel=Annull\u00E9r
+
+Button.yes=Ja
+
+Button.no=Nej
+
 Button.apply=Anvend
 Button.apply.mnemonic=A
 
@@ -20,7 +28,7 @@ Button.close.mnemonic=L
 Button.continue=Forts\u00E6t
 Button.continue.mnemonic=F
 
-Button.edit=Redig\u00e9r
+Button.edit=Redig\u00E9r
 Button.edit.mnemonic=R
 
 Button.exit=Afslut
