--- a/properties/com/jidesoft/plaf/basic/folderChooser_da.properties
+++ b/properties/com/jidesoft/plaf/basic/folderChooser_da.properties
@@ -12,3 +12,5 @@ FolderChooser.toolbar.home=G\u00E5 Hjem
 FolderChooser.toolbar.mydocuments=G\u00E5 til Dokumenter
 FolderChooser.toolbar.delete=Slet den valgte mappe
 FolderChooser.toolbar.new=Opret en ny mappe under den valgte mappe
+FolderChooser.toolbar.refresh=Genopfrisk mappevisning for at reflektere eksterne mappe\u00E6ndringer
+FolderChooser.toolbar.recent=Seneste:
