Common,B,JideButton,Fixed a bug that the text is clipped on JDK 11,,no

--- a/properties/com/jidesoft/swing/swing_da.properties
+++ b/properties/com/jidesoft/swing/swing_da.properties
@@ -11,7 +11,7 @@ SearchableBar.find=Find:
 SearchableBar.find.mnemonic=F
 SearchableBar.findNext=Find N\u00E6ste
 SearchableBar.findNext.mnemonic=N
-SearchableBar.findNext.tooltip=Find n\u00E6ste forekost af frasen
+SearchableBar.findNext.tooltip=Find n\u00E6ste forekomst af frasen
 SearchableBar.findPrevious=Find Tidligere
 SearchableBar.findPrevious.mnemonic=P
 SearchableBar.findPrevious.tooltip=Find tidligere forekomster af frasen
